--- a/index.html
+++ b/index.html
@@ -355,12 +355,17 @@
 
                         <div class="form-parte1">
 
-                            <div class="container1-form-parte1">
+                            <div class="container1-form-parte1 responsivo-nomecompleto">
+                                <label for="nomecompleto">Nome Completo</label>
+                                <input type="text" id="nomecompleto" class="input-padrao" required>
+                            </div>
+
+                            <div class="container1-form-parte1 responsivonom">
                                 <label for="nome">Nome</label>
                                 <input type="text" id="nome" class="input-padrao" required>
                             </div>
 
-                            <div class="container1-form-parte1">
+                            <div class="container1-form-parte1 responsivonom">
                                 <label for="sobrenome">Sobrenome</label>
                                 <input type="text" id="sobrenome" class="input-padrao" required>
                             </div>
@@ -383,7 +388,7 @@
 
                         <div class="form-parte2">
                             <label for="mensagem">Sua Mensagem</label>
-                            <textarea cols="70" rows="10" id="mensagem" class="input-padrao" required></textarea>
+                            <textarea cols="70" rows="10" id="mensagem" class="input-padrao caixa-texto" required></textarea>
                         </div>
 
                         <label class="checkbox"><input type="checkbox">Li e concordo com os Termos & Condições.</label>
@@ -391,6 +396,18 @@
                         <input type="submit" value="ENVIAR MENSAGEM" class="enviar">
 
                     </form>
+
+                    <div class="mapa-container-parte1 resp-mapa">
+                        <h4 class="onde-nos-encontrar">ONDE NOS ENCONTRAR:</h4>
+                        <div class="container-endereco">
+                            <img src="./imgs/local.png">
+                            <p>Rua Dr. Besouro, 1997 - Cidade Alta / Natal - RN</p>
+                        </div>
+                        <!-- DEIXAR MAPA PRETO E BRANCO COM PONTO LARANJA-->
+                         <!-- usar json ?? Google maps API ? -->
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126997.44576822523!2d-35.27594082980353!3d-5.901863741656016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7b3000cc6486131%3A0x116394c0264ec5ba!2sIFRN%20-%20Cidade%20Alta%20-%20Natal%2FRN!5e0!3m2!1spt-BR!2sbr!4v1719432890969!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+    
                 </div>
             </div>
         </div>
