finalização parcial footer

--- a/index.html
+++ b/index.html
@@ -456,6 +456,50 @@
                 </div>
             </div>
         </div>
+
+        <div class="footer-container footer-resp">
+            <div class="footer-parte1">
+                <a href="./index.html">
+                    <img src="./imgs/logo-vector.png" alt="logo">
+                </a>
+                <div class="footer-parte2-bloco1">
+                    <a class="contato-footer"  href="#">Contato</a>
+                    <p>+55 84 99999-9999</p>
+                    <p>contato@digitalsurge.com.br</p>
+                </div>
+                <div class="footer-parte2-bloco2">
+                    <p>Rua Dr. Besouro, 1997 - Cidade Alta
+                    <p>Natal - RN</p>
+                </div>
+
+                <div class="social-icons">
+                        <a href="https://www.linkedin.com" target="_blank" class="social-icon">
+                          <i class="fab fa-linkedin"></i>
+                        </a>
+                        <a href="https://www.instagram.com" target="_blank" class="social-icon">
+                          <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="https://www.facebook.com" target="_blank" class="social-icon">
+                          <i class="fab fa-facebook"></i>
+                        </a>
+                </div> 
+                <p class="texto-copyright">Digital Surge © alguns diretos reservados.</p>
+                </div>
+                <div class="footer-parte2">
+                    <a href="#">informações</a>
+                    <div class="footer-parte3-links">
+                        <ul>
+                            <li><a href="#">Início</a></li>
+                            <li><a href="#">Sobre</a></li>
+                            <li><a href="#">Serviços</a></li>
+                            <li><a href="#">Contato</a></li>
+                        </ul>
+                    </div>
+                </div>
+        </div>
+            
+        
+
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script type="module" src="./js/script.js"></script>
