--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             </a>
             <ul>
                 <li><a href="./index.html">Início</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Serviços</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#servicos">Serviços</a></li>
+                <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -34,7 +34,7 @@
             <h1>Impulsione seu negócio com <span>estraté</span>g<span>ias</span> de Marketing Digital eficazes</h1>
             <img src="./imgs/graficos-banner.svg" alt="gráfico do banner">
         </div>
-        <div class="Sobre">
+        <div class="Sobre" id="sobre">
             <h1>Sobre a Digital Surge</h1>
             <p class="descricao-sobre">A Digital Surge é uma agência de marketing digital comprometida em ajudar empresas a alcançar seu público-alvo e aumentar suas vendas por meio de estratégias inovadoras e personalizadas.</p>
             <div class="nossa-equipe">
@@ -93,7 +93,7 @@
                 </p>
             </div>
         </div>
-        <div class="servicos">
+        <div class="servicos" id="servicos">
             <h2>Serviços</h2>
             <div class="textos-servicos">
                 <p>A Digital Surge oferece serviços completos de Gestão de Mídias Sociais, SEO, Marketing de Conteúdo e Publicidade Online, incluindo Google Ads e Facebook Ads. Nossa equipe especializada trabalha para aumentar sua visibilidade online, engajar seu público-alvo e impulsionar suas conversões, garantindo resultados significativos e mensuráveis para o seu negócio.</p>
@@ -332,7 +332,7 @@
                 </div>
 
         </div>
-        <div class="contato">
+        <div class="contato" id="contato">
             <h2>Contato</h2>
             <div class="container-contato">
                 <div class="contaier-parte1">
@@ -448,10 +448,10 @@
                 <h2>Informações</h2>
                 <div class="footer-parte3-links">
                     <ul>
-                        <li><a href="#">Início</a></li>
-                        <li><a href="#">Sobre</a></li>
-                        <li><a href="#">Serviços</a></li>
-                        <li><a href="#">Contato</a></li>
+                        <li><a href="./index.html">Início</a></li>
+                        <li><a href="#sobre">Sobre</a></li>
+                        <li><a href="#servicos">Serviços</a></li>
+                        <li><a href="#contato">Contato</a></li>
                     </ul>
                 </div>
             </div>
