--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html">
+            <a href="#inicio">
                 <img src="./imgs/logo-vector.png" alt="logo">
             </a>
             <ul>
-                <li><a href="./index.html">Início</a></li>
+                <li><a href="#inicio">Início</a></li>
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#servicos">Serviços</a></li>
                 <li><a href="#contato">Contato</a></li>
@@ -30,9 +30,11 @@
         </nav>
     </header>
     <main>
-        <div class="banner">
-            <h1>Impulsione seu negócio com <span>estraté</span>g<span>ias</span> de Marketing Digital eficazes</h1>
-            <img src="./imgs/graficos-banner.svg" alt="gráfico do banner">
+        <div id="inicio">
+            <div class="banner">
+                <h1>Impulsione seu negócio com <span>estraté</span>g<span>ias</span> de Marketing Digital eficazes</h1>
+                <img src="./imgs/graficos-banner.svg" alt="gráfico do banner">
+            </div>
         </div>
         <div class="Sobre" id="sobre">
             <h1>Sobre a Digital Surge</h1>
@@ -448,7 +450,7 @@
                 <h2>Informações</h2>
                 <div class="footer-parte3-links">
                     <ul>
-                        <li><a href="./index.html">Início</a></li>
+                        <li><a href="#inicio">Início</a></li>
                         <li><a href="#sobre">Sobre</a></li>
                         <li><a href="#servicos">Serviços</a></li>
                         <li><a href="#contato">Contato</a></li>
@@ -489,10 +491,10 @@
                     <a href="#">informações</a>
                     <div class="footer-parte3-links">
                         <ul>
-                            <li><a href="#">Início</a></li>
-                            <li><a href="#">Sobre</a></li>
-                            <li><a href="#">Serviços</a></li>
-                            <li><a href="#">Contato</a></li>
+                            <li><a href="#inicio">Início</a></li>
+                            <li><a href="#sobre">Sobre</a></li>
+                            <li><a href="#servicos">Serviços</a></li>
+                            <li><a href="#contato">Contato</a></li>
                         </ul>
                     </div>
                 </div>
@@ -503,7 +505,5 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script type="module" src="./js/script.js"></script>
-    <!-- Corrigir para chamar apenas 1 arquivo js é possível ? -->
-    <script src="./js/sevicos-modal.js"></script>
 </body>
 </html>
