colocando mais semântica

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         </nav>
     </header>
     <main>
-        <div id="inicio">
+        <section id="inicio">
             <div class="banner">
                 <h1>Impulsione seu negócio com <span>estraté</span>g<span>ias</span> de Marketing Digital eficazes</h1>
                 <img src="./imgs/graficos-banner.svg" alt="gráfico do banner">
             </div>
-        </div>
-        <div class="Sobre" id="sobre">
+        </section>
+        <section class="Sobre" id="sobre">
             <h1>Sobre a Digital Surge</h1>
             <p class="descricao-sobre">A Digital Surge é uma agência de marketing digital comprometida em ajudar empresas a alcançar seu público-alvo e aumentar suas vendas por meio de estratégias inovadoras e personalizadas.</p>
             <div class="nossa-equipe">
@@ -94,8 +94,8 @@
                 <p class="paragrafo-sobre"><span>Aprendizado Contínuo:</span> Investir no desenvolvimento contínuo de nossa equipe para estar sempre à frente das tendências do mercado.
                 </p>
             </div>
-        </div>
-        <div class="servicos" id="servicos">
+        </section>
+        <section class="servicos" id="servicos">
             <h2>Serviços</h2>
             <div class="textos-servicos">
                 <p>A Digital Surge oferece serviços completos de Gestão de Mídias Sociais, SEO, Marketing de Conteúdo e Publicidade Online, incluindo Google Ads e Facebook Ads. Nossa equipe especializada trabalha para aumentar sua visibilidade online, engajar seu público-alvo e impulsionar suas conversões, garantindo resultados significativos e mensuráveis para o seu negócio.</p>
@@ -333,8 +333,8 @@
                     </div>
                 </div>
 
-        </div>
-        <div class="contato" id="contato">
+        </section>
+        <section class="contato" id="contato">
             <h2>Contato</h2>
             <div class="container-contato">
                 <div class="contaier-parte1">
@@ -408,7 +408,7 @@
     
                 </div>
             </div>
-        </div>
+        </section>
     </main>
     <footer>
         <div class="footer-container">
